--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "prettier": "prettier --config .prettierrc src/**/*.ts --write",
     "lint": "eslint . --ext .ts  --fix",
+    "install":"npm i",
+    "clean": "rm -rf build/ || true",
     "build": "npx tsc",
+    "depoly":"chmod +x bin/deploy.sh && bin/deploy.sh",
     "env-variable": "export NODE_TLS_REJECT_UNAUTHORIZED='0'",
-    "up": "dev=test db-migrate up",
-    "down": "dev=test db-migrate down",
-    "test": "dev=test npm run up up && npm run build && jasmine && npm run down",
-    "start": "node build/index.js",
+    "up": "env=test db-migrate up",
+    "down": "env=test db-migrate down",
+    "test": "env=development npm run up up && npm run build && jasmine && npm run down",
+    "startx": "npm run build && node build/index.js",
     "dev": "npm run prettier && npm run lint && npm run test && npm run start",
     "dev-server": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./build/index.js\""
   },
