--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "prettier": "prettier --config .prettierrc src/**/*.ts --write",
     "lint": "eslint . --ext .ts  --fix",
-    "install":"npm i",
+    "i-nstall":"npm i",
     "clean": "rm -rf build/ || true",
     "build": "npm run clean && npx tsc",
     "depoly":"chmod +x bin/deploy.sh && bin/deploy.sh",
     "env-variable": "export NODE_TLS_REJECT_UNAUTHORIZED='0'",
     "up": "env=test db-migrate up",
     "down": "env=test db-migrate down",
+    "start": "node ./build/index.js",
     "test": "env=development npm run up up && npm run build && jasmine && npm run down",
     "startx": "npm run build && node build/index.js",
     "dev": "npm run prettier && npm run lint && npm run test && npm run start",
