--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "prettier": "prettier --config .prettierrc src/**/*.ts --write",
     "lint": "eslint . --ext .ts  --fix",
-    "i-nstall":"npm i",
+    "i-nstall": "npm i",
     "clean": "rm -rf build/ || true",
     "build": "npm run clean && npx tsc",
-    "depoly":"chmod +x bin/deploy.sh && bin/deploy.sh",
+    "depoly": "chmod +x bin/deploy.sh && bin/deploy.sh",
     "env-variable": "export NODE_TLS_REJECT_UNAUTHORIZED='0'",
     "up": "env=test db-migrate up",
     "down": "env=test db-migrate down",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-validator": "^3.0.0",
@@ -55,6 +56,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cloudinary": "^1.29.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
@@ -62,8 +64,8 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.3",
-    "pg-hstore": "^2.3.4",
     "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.19.0"
   }
 }
