admins created & user updated+0-

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "up": "db-migrate up",
     "down": "env=test db-migrate down",
     "start": "node ./build/index.js",
+    "npm start": "NODE_DEBUG=* node index.js",
     "test": "env=development npm run up up && npm run build && jasmine && npm run down",
     "startx": "npm run build && node build/index.js",
     "dev": "npm run prettier && npm run lint && npm run test && npm run start",
